src/vm/snapshots/hebi__vm__tests__table_nested_access_keyed.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := {a: {b: 10}}
v["a"]["b"]


# Result:
Ok(
    Int(
        10,
    ),
)
