src/vm/snapshots/hebi__vm__tests__unary_invert.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := 20
-v


# Result:
Int(
    -20,
)
