src/vm/snapshots/hebi__vm__tests__unary_not.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := false
!v


# Result:
Ok(
    Bool(
        true,
    ),
)
