src/vm/snapshots/hebi__vm__tests__unary_not_int.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := 0
!v


# Result:
Ok(
    Bool(
        true,
    ),
)
