src/vm/snapshots/hebi__vm__tests__unary_not_none.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := none
!v


# Result:
Bool(
    true,
)
