src/vm/snapshots/hebi__vm__tests__unary_not_str.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := "test"
!v


# Result:
Bool(
    false,
)
