src/vm/snapshots/hebi__vm__tests__use_import_in_nested_scope.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
import test
fn foo():
  print test
foo()


# Result:
None

# Output:
<module `test`>

